<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bpWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Backpack">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/bp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/collectBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="5dp"
        android:text="@string/pointsZero"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/collectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/button2_def"
        android:text="@string/close" />

    <ListView
        android:id="@+id/collectedLyricList"
        android:layout_width="410dp"
        android:layout_height="550dp"
        android:layout_above="@+id/textView5"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="5dp"
        android:background="#77FF9800">

    </ListView>

    <Button
        android:id="@+id/bpUpgrade"
        android:layout_width="73dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="328dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bp_up_icon" />


</RelativeLayout>

